# hw_cmake

./: CMakeLists.txt  README.md
A/: index.h  preparing.py
B/: CMakeLists.txt  lib.cpp  lib.h
C/: main.cpp  main.h
